# dewansh-python-website

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: applicationform.html  applicationsubmitted.html  home.html  jobdetails.html  jobitems.html
